# XtendTask

./: Dockerfile  LICENSE  README.md  docker_up.sh
sjtu_drone/sjtu_drone_bringup/config/: drone.yaml
sjtu_drone/sjtu_drone_bringup/rviz/: rviz.rviz
sjtu_drone/sjtu_drone_control/: setup.py
sjtu_drone/sjtu_drone_control/sjtu_drone_control/: drone_position_control.py
sjtu_drone/sjtu_drone_control/sjtu_drone_control.egg-info/: PKG-INFO  SOURCES.txt
task1/: CMakeLists.txt  package.xml
task1/assignment/: control_engineer_test.odt  velocity_sensors_data.csv  velocity_sensors_data.ods
task1/assignment/original/: Control_Engineer_Test.docx
task1/config/: ekf_drone.yaml
task1/config/rviz/: drone.rviz
task1/launch/: create_bag.launch.py  ekf.launch.py  urdf.launch.py
task1/scripts/: create_bag.py
task2/: CMakeLists.txt  package.xml
task2/launch/: drone_sim.launch.py
